--- a/app/src/main/res/layout/activity_media_management.xml
+++ b/app/src/main/res/layout/activity_media_management.xml
@@ -1,40 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.activity.MediaManagementActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <Button
-        android:id="@+id/getImage"
+    <data>
+
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/Get_image"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        tools:context=".ui.activity.MediaOperatingActivity">
 
-    <com.facebook.drawee.view.SimpleDraweeView
-        android:id="@+id/preview"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        app:layout_constraintTop_toBottomOf="@id/getImage"
-        app:layout_constraintStart_toStartOf="parent"/>
+        <Button
+            android:id="@+id/getImage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/Get_image"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/imageRecyclerView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="@id/preview"
-        app:layout_constraintBottom_toBottomOf="@id/preview"
-        app:layout_constraintStart_toEndOf="@id/preview"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+        <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/preview"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            app:layout_constraintTop_toBottomOf="@id/getImage"
+            app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
-        android:id="@+id/getVideo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/Get_video"
-        app:layout_constraintTop_toBottomOf="@id/preview" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/imageRecyclerView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="@id/preview"
+            app:layout_constraintBottom_toBottomOf="@id/preview"
+            app:layout_constraintStart_toEndOf="@id/preview"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/getVideo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/Get_video"
+            app:layout_constraintTop_toBottomOf="@id/preview" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
