--- a/app/src/main/res/layout/activity_status_bar.xml
+++ b/app/src/main/res/layout/activity_status_bar.xml
@@ -4,9 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
-            name="onClick"
-            type="android.view.View.OnClickListener" />
+            name="isInsetsController"
+            type="Boolean" />
+
         <variable
             name="viewModel"
             type="com.sq26.experience.ui.activity.StatusBarViewModel" />
@@ -17,57 +19,114 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@mipmap/bg"
+        android:fitsSystemWindows="true"
         android:orientation="vertical"
         tools:context=".ui.activity.StatusBarActivity">
 
-        <CheckBox
-            android:id="@+id/checkbox1"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="弱化状态栏和导航栏的图标(设置状态栏和导航栏中的图标变小，变模糊或者弱化其效果。这个标志一般用于游戏，电子书，视频，或者不需要去分散用户注意力的应用软件)" />
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:visibility="@{isInsetsController}">
 
-        <CheckBox
-            android:id="@+id/checkbox2"
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:onCheckedChange="@{viewModel::showStatusBar}"
+                android:text="显示状态栏" />
+
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:onCheckedChange="@{viewModel::showNavigationBar}"
+                android:text="显示导航栏" />
+
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:onCheckedChange="@{viewModel::showSystemBar}"
+                android:text="显示系统栏(包括状态栏,导航栏,虚拟键盘)" />
+
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:onCheckedChange="@{viewModel::showTest}"
+                android:text="显示测试" />
+        </LinearLayout>
+
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="隐藏导航栏，点击屏幕任意区域，导航栏将重新出现，并且不会自动消失" />
+            android:layout_height="match_parent"
+            android:visibility="@{!isInsetsController}">
 
-        <CheckBox
-            android:id="@+id/checkbox3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="隐藏状态栏(点击屏幕区域不会出现，需要从状态栏位置下拉才会出现,并且不会自动消失)" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-        <CheckBox
-            android:id="@+id/checkbox4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="拓展布局到导航栏后面(将布局内容拓展到导航栏的后面)" />
 
-        <CheckBox
-            android:id="@+id/checkbox5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="拓展布局到状态栏后面(将布局内容拓展到状态的后面)" />
+                <com.google.android.material.checkbox.MaterialCheckBox
+                    android:id="@+id/checkbox1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:checked="@={viewModel.SYSTEM_UI_FLAG_LOW_PROFILE}"
+                    android:text="弱化状态栏和导航栏的图标(设置状态栏和导航栏中的图标变小，变模糊或者弱化其效果。这个标志一般用于游戏，电子书，视频，或者不需要去分散用户注意力的应用软件)" />
 
-        <CheckBox
-            android:id="@+id/checkbox6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="稳定的布局，不会随系统栏的隐藏、显示而变化(主要是在全屏和非全屏切换时，布局不要有大的变化。一般和隐藏导航栏、隐藏状态栏搭配使用)" />
+                <com.google.android.material.checkbox.MaterialCheckBox
+                    android:id="@+id/checkbox2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:checked="@={viewModel.SYSTEM_UI_FLAG_HIDE_NAVIGATION}"
+                    android:text="隐藏导航栏，点击屏幕任意区域，导航栏将重新出现，并且不会自动消失" />
 
-        <CheckBox
-            android:id="@+id/checkbox7"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="沉浸模式，用户可以交互的界面(使状态栏和导航栏真正的进入沉浸模式,即全屏模式，如果没有设置这个标志，设置全屏时，我们点击屏幕的任意位置，就会恢复为正常模式,一般和隐藏导航栏、隐藏状态栏搭配使用)" />
+                <com.google.android.material.checkbox.MaterialCheckBox
+                    android:id="@+id/checkbox3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:checked="@={viewModel.SYSTEM_UI_FLAG_FULLSCREEN}"
+                    android:text="隐藏状态栏(点击屏幕区域不会出现，需要从状态栏位置下拉才会出现,并且不会自动消失)" />
 
-        <CheckBox
-            android:id="@+id/checkbox8"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="沉浸模式，用户可以交互的界面。同时，用户上下拉系统栏时，会自动隐藏系统栏(它的效果跟View.SYSTEM_UI_FLAG_IMMERSIVE一样。但是，它在全屏模式下，用户上下拉状态栏或者导航栏时，这些系统栏只是以半透明的状态显示出来，并且在一定时间后会自动消失)" />
+                <com.google.android.material.checkbox.MaterialCheckBox
+                    android:id="@+id/checkbox4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:checked="@={viewModel.SYSTEM_UI_FLAG_LAYOUT_HIDE_NAVIGATION}"
+                    android:text="拓展布局到导航栏后面(将布局内容拓展到导航栏的后面)" />
 
+                <com.google.android.material.checkbox.MaterialCheckBox
+                    android:id="@+id/checkbox5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:checked="@={viewModel.SYSTEM_UI_FLAG_LAYOUT_FULLSCREEN}"
+                    android:text="拓展布局到状态栏后面(将布局内容拓展到状态的后面)" />
+
+                <com.google.android.material.checkbox.MaterialCheckBox
+                    android:id="@+id/checkbox6"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:checked="@={viewModel.SYSTEM_UI_FLAG_LAYOUT_STABLE}"
+                    android:text="稳定的布局，不会随系统栏的隐藏、显示而变化(主要是在全屏和非全屏切换时，布局不要有大的变化。一般和隐藏导航栏、隐藏状态栏搭配使用)" />
+
+                <com.google.android.material.checkbox.MaterialCheckBox
+                    android:id="@+id/checkbox7"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:checked="@={viewModel.SYSTEM_UI_FLAG_IMMERSIVE}"
+                    android:text="沉浸模式，用户可以交互的界面(使状态栏和导航栏真正的进入沉浸模式,即全屏模式，如果没有设置这个标志，设置全屏时，我们点击屏幕的任意位置，就会恢复为正常模式,一般和隐藏导航栏、隐藏状态栏搭配使用)" />
+
+                <com.google.android.material.checkbox.MaterialCheckBox
+                    android:id="@+id/checkbox8"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:checked="@={viewModel.SYSTEM_UI_FLAG_IMMERSIVE_STICKY}"
+                    android:text="沉浸模式，用户可以交互的界面。同时，用户上下拉系统栏时，会自动隐藏系统栏(它的效果跟View.SYSTEM_UI_FLAG_IMMERSIVE一样。但是，它在全屏模式下，用户上下拉状态栏或者导航栏时，这些系统栏只是以半透明的状态显示出来，并且在一定时间后会自动消失)" />
+
+            </LinearLayout>
+        </androidx.core.widget.NestedScrollView>
 
     </LinearLayout>
 </layout>
