--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -90,4 +90,7 @@
         <!--        设置CheckBox选中的颜色-->
         <item name="android:colorControlActivated">@color/colorAccent</item>
     </style>
+
+    <style name="ActivityBarTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar"/>
+
 </resources>
