下载管理bug修复

--- a/app/src/main/res/layout/activity_app_management.xml
+++ b/app/src/main/res/layout/activity_app_management.xml
@@ -14,7 +14,7 @@
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
-            style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
+            style="@style/MaterialToolbarStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
