--- a/app/src/main/res/layout/activity_download_management.xml
+++ b/app/src/main/res/layout/activity_download_management.xml
@@ -26,6 +26,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="删除"/>
+        <Button
+            android:id="@+id/closeServer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="关闭服务"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/downloadRecyclerView"
