--- a/app/src/main/res/layout/activity_status_bar.xml
+++ b/app/src/main/res/layout/activity_status_bar.xml
@@ -20,8 +20,18 @@
         android:layout_height="match_parent"
         android:background="@mipmap/bg"
         android:fitsSystemWindows="true"
+        android:animateLayoutChanges="true"
         android:orientation="vertical"
         tools:context=".ui.activity.StatusBarActivity">
+
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/toolbar"
+            style="@style/MaterialToolbarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
+            app:title="@string/Invasive_experience" />
 
         <LinearLayout
             android:layout_width="match_parent"
