重构了首页,分页和recyclerView的适配器

--- a/app/src/main/res/layout/item_recyclerview.xml
+++ b/app/src/main/res/layout/item_recyclerview.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="homeMenu"
-            type="com.sq26.experience.data.HomeMenu" />
+            type="com.sq26.experience.entity.HomeMenu" />
     </data>
 
     <LinearLayout
