--- a/app/src/main/res/layout/activity_data_binding.xml
+++ b/app/src/main/res/layout/activity_data_binding.xml
@@ -94,13 +94,13 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:onClickAntiShake="@{onClickAntiShake}"
+            onClickAntiShake="@{onClickAntiShake}"
             android:text="点击防抖" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:onClickAntiShake="@{viewmodel::onClickAntiShake}"
+            onClickAntiShake="@{viewmodel::onClickAntiShake}"
             android:text="点击防抖ViewModel" />
 
         <Button
