--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,7 +14,13 @@
     <color name="translucent">#40000000</color>
     <!--灰色-->
     <color name="gray">#808080</color>
+    <!--背景色-->
+    <color name="background">#F4F4F4</color>
     <!--黑色-->
     <color name="black">#000</color>
+    <color name="light_blue_50">#FFE1F5FE</color>
+    <color name="light_blue_200">#FF81D4FA</color>
+    <color name="light_blue_600">#FF039BE5</color>
+    <color name="light_blue_900">#FF01579B</color>
 
 </resources>
