--- a/app/src/main/res/layout/activity_data_store.xml
+++ b/app/src/main/res/layout/activity_data_store.xml
@@ -58,8 +58,7 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@={viewModel.text}" />
+                android:layout_height="wrap_content"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
