--- a/app/src/main/res/layout/item_file.xml
+++ b/app/src/main/res/layout/item_file.xml
@@ -5,6 +5,13 @@
 
     <data>
 
+        <import type="com.sq26.experience.binding.StringUtil" />
+
+        <import type="android.text.format.Formatter" />
+
+        <variable
+            name="item"
+            type="androidx.documentfile.provider.DocumentFile" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -21,21 +28,23 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <com.facebook.drawee.view.SimpleDraweeView
+        <ImageView
             android:id="@+id/simpleDraweeView"
             android:layout_width="80dp"
-            android:layout_height="wrap_content"
+            android:layout_height="80dp"
             android:layout_marginStart="8dp"
+            android:src="@{item.file?@drawable/ic_insert_drive_file_black_24dp:@drawable/ic_folder_open_black_24dp}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/select"
-            app:layout_constraintTop_toTopOf="parent"
-            fresco:viewAspectRatio="1" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:text="@{item.name}"
+            android:textColor="@{item.canWrite()?@android:color/holo_green_dark:@android:color/holo_red_dark}"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/simpleDraweeView"
@@ -47,6 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:gravity="end"
+            android:text="@{item.file?StringUtil.getFileSizeStr(item.length()):@string/s_projects(StringUtil.size(item.listFiles()))}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/simpleDraweeView"
             app:layout_constraintTop_toBottomOf="@id/name" />
@@ -58,6 +68,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:gravity="end"
+            android:text="@{StringUtil.convertLongToDateTime(item.lastModified())}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/simpleDraweeView"
             app:layout_constraintTop_toBottomOf="@id/remark" />
