简单使用moshi json解析框架和自定义布局FloatingActionButtonLayout

--- a/app/src/main/res/layout/item_recyclerview.xml
+++ b/app/src/main/res/layout/item_recyclerview.xml
@@ -13,6 +13,7 @@
     </data>
 
     <LinearLayout
+        android:transitionName="main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="@{clickListener}"
