--- a/app/src/main/res/layout/fragment_permission_request.xml
+++ b/app/src/main/res/layout/fragment_permission_request.xml
@@ -89,6 +89,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="申请所有文件权限" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/requestApkInstall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="申请apk安装权限" />
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
     </LinearLayout>
