添加资源管理器

--- a/app/src/main/res/layout/activity_storage_management.xml
+++ b/app/src/main/res/layout/activity_storage_management.xml
@@ -10,25 +10,31 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.fragment.MainFragment">
+        tools:context=".ui.activity.StorageManagementActivity">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             style="@style/MaterialToolbarStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:title="@string/menu" />
+            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
+            app:title="储存空间管理" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
+        <com.google.android.material.checkbox.MaterialCheckBox
+            android:id="@+id/allData"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:layout_height="wrap_content"
+            android:text="全部数据"
+            app:layout_constraintTop_toBottomOf="@id/toolbar" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar"
-            tools:listitem="@layout/item_recyclerview" />
+            android:layout_margin="16dp"
+            android:text="清理"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
