--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -29,5 +29,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="下载通知" />
+
+        <Button
+            android:id="@+id/sett"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="设置" />
     </LinearLayout>
 </layout>
